--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,87 +1,65 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: " en-US" }}">
+<html lang="{{ site.lang | default: "en-US" }}">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  {% seo %}
-  <link rel="stylesheet" href="{{ " /assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-  <!--[if lt IE 9]>
+{% seo %}
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-</head>
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        
+        {% if site.logo %}
+          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% endif %}
 
-<body>
-  <div class="wrapper">
-    <header>
-      <h1><a href="{{ " /" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-      {% if site.logo %}
-      <img class="logo" src="{{site.logo | relative_url}}" alt="Logo" />
-      {% endif %}
+        {% if site.github.is_project_page %}
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        {% endif %}
 
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        {% endif %}
 
-      <p>{{ site.description | default: site.github.project_tagline }}</p>
+        {% if site.show_downloads %}
+        <ul class="downloads">
+          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+        </ul>
+        {% endif %}
+      </header>
+      <section>
 
-      <!-- <input type="text" id="search-input" placeholder="Type to Search... " size=15> -->
-
-
-      <p>Navigation:</p>
-      <p><a href="{{ " /" | absolute_url }}"><i class="fa fa-home"></i> Home</a></p>
-      <p><a href="{{ " /about" | absolute_url }}"><i class="fas fa-male"> About Me</i></a></p>
-      <p>External Links</p>
-      {% if site.personal.linkedin %}
-      <p><a href="{{ site.personal.linkedin }}" target="_blank" rel="noreferrer noopener"><i
-            class="fab fa-linkedin"></i> LinkedIn</a></p>
-      {% endif %}
-      {% if site.personal.github %}
-      <p><a href="{{ site.personal.github }}" target="_blank" rel="noreferrer noopener"><i class="fab fa-github">
-            Github</i></a></p>
-      {% endif %}
-      {% if site.personal.googlescholar %}
-      <p><a href="{{ site.personal.googlescholar }}" target="_blank" rel="noreferrer noopener"><i
-            class="fas fa-graduation-cap"></i> Google Scholar</a></p>
-      {% endif %}
-
-
-    </header>
-    <section>
-
-      <!-- <ul id="results-container"></ul> -->
       {{ content }}
 
-    </section>
-    <footer>
-      <!-- <script src="{{ site.baseurl }}/assets/js/jekyll-search.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    SimpleJekyllSearch.init({
-      searchInput: document.getElementById('search-input'),
-      resultsContainer: document.getElementById('results-container'),
-      dataSource: '{{ site.baseurl }}/search.json',
-      searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}<\/a><\/li>',
-      noResultsText: 'No results found',
-      limit: 10,
-      fuzzy: true,
-    });
-  </script> -->
-    </footer>
-  </div>
-  <script src="{{ " /assets/js/scale.fix.js" | relative_url }}"></script>
-  {% if site.google_analytics %}
-  <script>
-    (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', '{{ site.google_analytics }}', 'auto');
-    ga('send', 'pageview');
-  </script>
-  {% endif %}
-</body>
-
+      </section>
+      <footer>
+        {% if site.github.is_project_page %}
+        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    {% if site.google_analytics %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', '{{ site.google_analytics }}', 'auto');
+      ga('send', 'pageview');
+    </script>
+    {% endif %}
+  </body>
 </html>
