--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -22,21 +23,23 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p>Navigation:</p>
+        <p><a href="{{ " /" | absolute_url }}"><i class="fa fa-home"></i> Home</a></p>
+        <p><a href="{{ " /about" | absolute_url }}"><i class="fas fa-male"> About Me</i></a></p>
+        <p>External Links</p>
+        {% if site.personal.linkedin %}
+        <p><a href="{{ site.personal.linkedin }}" target="_blank" rel="noreferrer noopener"><i
+              class="fab fa-linkedin"></i> LinkedIn</a></p>
+        {% endif %}
+        {% if site.personal.github %}
+        <p><a href="{{ site.personal.github }}" target="_blank" rel="noreferrer noopener"><i class="fab fa-github">
+              Github</i></a></p>
+        {% endif %}
+        {% if site.personal.googlescholar %}
+        <p><a href="{{ site.personal.googlescholar }}" target="_blank" rel="noreferrer noopener"><i
+              class="fas fa-graduation-cap"></i> Google Scholar</a></p>
         {% endif %}
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
       </header>
       <section>
 
@@ -44,10 +47,6 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
