--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ '/' | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
           <img class="logo" src="{{site.logo | relative_url}}" alt="Logo" />
@@ -24,8 +24,8 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p>Navigation:</p>
-        <p><a href="{{ " /" | absolute_url }}"><i class="fa fa-home"></i> Home</a></p>
-        <p><a href="{{ " /about" | absolute_url }}"><i class="fas fa-male"> About Me</i></a></p>
+        <p><a href="{{ '/' | absolute_url }}"><i class="fa fa-home"></i> Home</a></p>
+        <p><a href="{{ '/about' | absolute_url }}"><i class="fas fa-male"> About Me</i></a></p>
         <p>External Links</p>
         {% if site.personal.linkedin %}
         <p><a href="{{ site.personal.linkedin }}" target="_blank" rel="noreferrer noopener"><i
@@ -49,7 +49,7 @@
       <footer>
       </footer>
     </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
