--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,12 @@
     max-width: 200px;
     border-radius: 100%;   
 }
+
+#search-input {
+    width: 100%; /* Full-width */
+    font-size: 16px; /* Increase font-size */
+    padding: 12px 20px 12px 40px; /* Add some padding */
+    border: 1px solid #ddd; /* Add a grey border */
+    margin-bottom: 12px; /* Add some space below the input */
+  }
+  
